[tool.poetry]
name = "django-cloudtype"
version = "0.1.0"
description = ""
authors = ["enterspacebs <anotherhell48@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_cloudtype"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.2"
pillow = "9.5.0"
djangorestframework = "3.14.0"
django-filter = "23.2"
djangorestframework-simplejwt = "5.2.2"
django-environ = "0.10.0"
django-cors-headers = "4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
